Add multiple pages

--- a/documentation/data_exploration.ipynb
+++ b/documentation/data_exploration.ipynb
@@ -557,6 +557,43 @@
     "print(f\"{models_with_eval}/{len(models)} models have evaluation results and {evals} evaluations in total (avg {evals/models_with_eval:.2f} per model)\")\n",
     "print(f\"{co2_and_evals}/{len(models)} models have CO2 emissions and evaluation results.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['region', 'other', 'library', 'license', 'language', 'dataset', 'pipeline_tag'])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tags = requests.get(\n",
+    "  \"https://huggingface.co/api/models-tags-by-type\",\n",
+    "  params={},\n",
+    "  headers={}\n",
+    ").json()\n",
+    "\n",
+    "# get all keys\n",
+    "keys = tags.keys()\n",
+    "keys"
+   ]
   }
  ],
  "metadata": {
