Commit for hosting

--- a/documentation/data_exploration.ipynb
+++ b/documentation/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 2124 models\n"
+      "Found 2143 models\n"
      ]
     }
    ],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,14 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Van de 2124 modellen op HuggingFace hebben er 2124 CO2 emissie data (100.00%)\n"
+      "Van de 2143 modellen op HuggingFace hebben er 2143 CO2 emissie data (100.00%)\n"
      ]
     }
    ],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -262,17 +262,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>distilbert/distilgpt2</td>\n",
+       "      <td>bigscience/bloom</td>\n",
        "      <td>None</td>\n",
        "      <td>text-generation</td>\n",
-       "      <td>2022-03-02 23:29:04+00:00</td>\n",
-       "      <td>3487912</td>\n",
-       "      <td>419</td>\n",
-       "      <td>149200.000000</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>2022-05-19 11:53:33+00:00</td>\n",
+       "      <td>6158</td>\n",
+       "      <td>4733</td>\n",
+       "      <td>24700000.0</td>\n",
+       "      <td>Estimating the Carbon Footprint of BLOOM, a 17...</td>\n",
+       "      <td>384 A100 80GB GPUs</td>\n",
        "      <td>pre-training</td>\n",
-       "      <td>None</td>\n",
+       "      <td>Orsay, France</td>\n",
        "      <td>None</td>\n",
        "      <td>NaN</td>\n",
        "      <td>None</td>\n",
@@ -280,71 +280,71 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AI-Lab-Makerere/en_lg</td>\n",
+       "      <th>382</th>\n",
+       "      <td>dalle-mini/dalle-mega</td>\n",
        "      <td>None</td>\n",
-       "      <td>text2text-generation</td>\n",
-       "      <td>2022-03-02 23:29:04+00:00</td>\n",
-       "      <td>20</td>\n",
+       "      <td>text-to-image</td>\n",
+       "      <td>2022-06-28 14:07:04+00:00</td>\n",
+       "      <td>75</td>\n",
+       "      <td>146</td>\n",
+       "      <td>450300.0</td>\n",
+       "      <td>MLCo2 Machine Learning Impact calculator</td>\n",
+       "      <td>TTPU v3-256</td>\n",
+       "      <td>pre-training</td>\n",
+       "      <td>East USA</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007</th>\n",
+       "      <td>eci-io/climategpt-7b-fsg</td>\n",
+       "      <td>None</td>\n",
+       "      <td>text-generation</td>\n",
+       "      <td>2023-12-01 17:05:08+00:00</td>\n",
+       "      <td>63</td>\n",
+       "      <td>4</td>\n",
+       "      <td>265800.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>8x NVIDIA H100 HBM</td>\n",
+       "      <td>pre-training</td>\n",
+       "      <td>Washington, USA</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006</th>\n",
+       "      <td>eci-io/climategpt-7b-fsc</td>\n",
+       "      <td>None</td>\n",
+       "      <td>text-generation</td>\n",
+       "      <td>2023-12-01 17:04:50+00:00</td>\n",
+       "      <td>52</td>\n",
+       "      <td>6</td>\n",
+       "      <td>262800.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>8x NVIDIA H100 HBM</td>\n",
+       "      <td>pre-training</td>\n",
+       "      <td>Washington, USA</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2123</th>\n",
+       "      <td>ysn-rfd/PersianMind-v1.0-Q4_K_M-GGUF</td>\n",
+       "      <td>None</td>\n",
+       "      <td>text-generation</td>\n",
+       "      <td>2024-08-19 05:30:58+00:00</td>\n",
+       "      <td>4</td>\n",
        "      <td>0</td>\n",
-       "      <td>133.021988</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>pre-training</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AI-Lab-Makerere/lg_en</td>\n",
-       "      <td>None</td>\n",
-       "      <td>text2text-generation</td>\n",
-       "      <td>2022-03-02 23:29:04+00:00</td>\n",
-       "      <td>21</td>\n",
-       "      <td>2</td>\n",
-       "      <td>126.344463</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>pre-training</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Aimendo/autonlp-triage-35248482</td>\n",
-       "      <td>None</td>\n",
-       "      <td>text-classification</td>\n",
-       "      <td>2022-03-02 23:29:04+00:00</td>\n",
-       "      <td>37</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.989145</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>pre-training</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Ajay191191/autonlp-Test-530014983</td>\n",
-       "      <td>None</td>\n",
-       "      <td>text-classification</td>\n",
-       "      <td>2022-03-02 23:29:04+00:00</td>\n",
-       "      <td>33</td>\n",
-       "      <td>0</td>\n",
-       "      <td>55.101963</td>\n",
+       "      <td>232380.0</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>pre-training</td>\n",
@@ -360,41 +360,49 @@
        "</div>"
       ],
       "text/plain": [
-       "                             modelId author            model_type  \\\n",
-       "0              distilbert/distilgpt2   None       text-generation   \n",
-       "1              AI-Lab-Makerere/en_lg   None  text2text-generation   \n",
-       "2              AI-Lab-Makerere/lg_en   None  text2text-generation   \n",
-       "3    Aimendo/autonlp-triage-35248482   None   text-classification   \n",
-       "4  Ajay191191/autonlp-Test-530014983   None   text-classification   \n",
+       "                                   modelId author       model_type  \\\n",
+       "0                         bigscience/bloom   None  text-generation   \n",
+       "382                  dalle-mini/dalle-mega   None    text-to-image   \n",
+       "2007              eci-io/climategpt-7b-fsg   None  text-generation   \n",
+       "2006              eci-io/climategpt-7b-fsc   None  text-generation   \n",
+       "2123  ysn-rfd/PersianMind-v1.0-Q4_K_M-GGUF   None  text-generation   \n",
        "\n",
-       "                 created_at  downloads  likes      emissions emissions_source  \\\n",
-       "0 2022-03-02 23:29:04+00:00    3487912    419  149200.000000             None   \n",
-       "1 2022-03-02 23:29:04+00:00         20      0     133.021988             None   \n",
-       "2 2022-03-02 23:29:04+00:00         21      2     126.344463             None   \n",
-       "3 2022-03-02 23:29:04+00:00         37      0       7.989145             None   \n",
-       "4 2022-03-02 23:29:04+00:00         33      0      55.101963             None   \n",
+       "                    created_at  downloads  likes   emissions  \\\n",
+       "0    2022-05-19 11:53:33+00:00       6158   4733  24700000.0   \n",
+       "382  2022-06-28 14:07:04+00:00         75    146    450300.0   \n",
+       "2007 2023-12-01 17:05:08+00:00         63      4    265800.0   \n",
+       "2006 2023-12-01 17:04:50+00:00         52      6    262800.0   \n",
+       "2123 2024-08-19 05:30:58+00:00          4      0    232380.0   \n",
        "\n",
-       "  hardware training_type training_location on_cloud  hours_used cpu_model  \\\n",
-       "0     None  pre-training              None     None         NaN      None   \n",
-       "1     None  pre-training              None     None         NaN      None   \n",
-       "2     None  pre-training              None     None         NaN      None   \n",
-       "3     None  pre-training              None     None         NaN      None   \n",
-       "4     None  pre-training              None     None         NaN      None   \n",
+       "                                       emissions_source            hardware  \\\n",
+       "0     Estimating the Carbon Footprint of BLOOM, a 17...  384 A100 80GB GPUs   \n",
+       "382            MLCo2 Machine Learning Impact calculator         TTPU v3-256   \n",
+       "2007                                               None  8x NVIDIA H100 HBM   \n",
+       "2006                                               None  8x NVIDIA H100 HBM   \n",
+       "2123                                               None                None   \n",
        "\n",
-       "   energy_consumed  ram_total_size  \n",
-       "0              NaN             NaN  \n",
-       "1              NaN             NaN  \n",
-       "2              NaN             NaN  \n",
-       "3              NaN             NaN  \n",
-       "4              NaN             NaN  "
+       "     training_type training_location on_cloud  hours_used cpu_model  \\\n",
+       "0     pre-training     Orsay, France     None         NaN      None   \n",
+       "382   pre-training          East USA     None         NaN      None   \n",
+       "2007  pre-training   Washington, USA     None         NaN      None   \n",
+       "2006  pre-training   Washington, USA     None         NaN      None   \n",
+       "2123  pre-training              None     None         NaN      None   \n",
+       "\n",
+       "      energy_consumed  ram_total_size  \n",
+       "0                 NaN             NaN  \n",
+       "382               NaN             NaN  \n",
+       "2007              NaN             NaN  \n",
+       "2006              NaN             NaN  \n",
+       "2123              NaN             NaN  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df.sort_values(by='emissions', ascending=False, inplace=True)\n",
     "df.head()"
    ]
   },
